--- a/views/kalender/wedstrijden.html
+++ b/views/kalender/wedstrijden.html
@@ -4,7 +4,7 @@
 
 <br>
 {{=A("Terug", _href=URL("kalender", "detail", args=kalender.id), _class="btn")}}
-{{=A("Nieuwe wedstrijd", _href=URL("wedstrijd", "nieuw"), _class="btn")}}
+{{=A("Nieuwe wedstrijd", _href=URL("wedstrijd", "nieuw", args=kalender.id),_class="btn")}}
 
 <br><br>
 {{if wedstrijden:}}
