--- a/views/wedstrijd/detail.html
+++ b/views/wedstrijd/detail.html
@@ -4,6 +4,7 @@
 
 <br>
 {{=A("Terug", _href=URL("kalender", "wedstrijden", args=kalender.id), _class="btn")}}
+{{=A("Reeksen", _href=URL("wedstrijd", "reeksen", args=form.record_id), _class="btn")}}
 
 <br><br>
 {{=form}}
