--- a/views/wedstrijd/detail.html
+++ b/views/wedstrijd/detail.html
@@ -1,6 +1,7 @@
 {{extend 'layout.html'}}
 
 <h2>Detail wedstrijd</h2>
+<h6>Wedstrijdkalender {{=kalender.jaar}}</h6>
 
 <br>
 {{=A("Terug", _href=URL("kalender", "wedstrijden", args=kalender.id), _class="btn")}}
