--- a/views/default/kalender.html
+++ b/views/default/kalender.html
@@ -7,7 +7,7 @@
     {{oude_maand = ""}}
     {{afsluiten_maand= False}}
     {{for wedstrijd in wedstrijden:}}
-        {{maand = wedstrijd.datum.strftime("%B")}}
+        {{maand = wedstrijd.wedstrijd.datum.strftime("%B")}}
         {{if oude_maand <> maand:}}
             {{if afsluiten_maand:}}
                     </tbody>
@@ -19,8 +19,9 @@
                 <tbody>
         {{pass}}
                 <tr>
-                    <td>{{=wedstrijd.datum}}</td>
-                    <td>{{=wedstrijd.omschrijving}}</td>
+                    <td>{{=wedstrijd.wedstrijd.datum}}</td>
+                    <td>{{=wedstrijd.wedstrijd.omschrijving}}</td>
+                    <td>{{=wedstrijd.reeks.aanvang}}</td>
                 </tr>
         {{if oude_maand <> maand:}}
             {{afsluiten_maand = True}}
