wedstrijd/deelnemers deelnemer/nieuw deelnemer/detail

--- a/views/wedstrijd/detail.html
+++ b/views/wedstrijd/detail.html
@@ -6,6 +6,7 @@
 <br>
 {{=A("Terug", _href=URL("kalender", "wedstrijden", args=kalender.id), _class="btn")}}
 {{=A("Reeksen", _href=URL("wedstrijd", "reeksen", args=form.record_id), _class="btn")}}
+{{=A("Deelnemers", _href=URL("wedstrijd", "deelnemers", args=form.record_id), _class="btn")}}
 
 <br><br>
 {{=form}}
